@@ -1,10 +1,15 @@
+2008-09-24  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* pokernetwork/attrpack.py (AttrsLookup): Created class by
+	modifying UserStatsLookup.
+
 2008-09-23  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* pokernetwork/attrpack.py (AttrsFactory): Created class by
 	modifying UserStatsFactory.
 	(AttrsFactory.__init__): Wrote method.
 	(AttrsFactory.getClass): Changed to use new instance variables.
-	(AttrsAccessor): Created class by modifying UserStatsAccessor. 
+	(AttrsAccessor): Created class by modifying UserStatsAccessor.
 
 2008-09-18  Bradley M. Kuhn  <bkuhn@ebb.org>
 
